// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/page-header/demo/actions.md correctly 1`] = `
Array [
  <div
    class="ezd-page-header site-page-header ant-page-header-ghost"
  >
    <div
      class="ezd-page-header-heading"
    >
      <div
        class="ezd-page-header-heading-left"
      >
        <div
          class="ezd-page-header-back"
        >
          <div
            aria-label="Back"
            class="ezd-page-header-back-button"
            role="button"
            style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
            tabindex="0"
          >
            <span
              aria-label="arrow-left"
              class="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <span
          class="ezd-page-header-heading-title"
          title="Title"
        >
          Title
        </span>
        <span
          class="ezd-page-header-heading-sub-title"
          title="This is a subtitle"
        >
          This is a subtitle
        </span>
      </div>
      <span
        class="ezd-page-header-heading-extra"
      >
        <button
          class="ezd-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ezd-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ezd-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </span>
    </div>
    <div
      class="ezd-page-header-content"
    >
      <div
        class="ezd-descriptions ant-descriptions-small"
      >
        <div
          class="ezd-descriptions-view"
        >
          <table>
            <tbody>
              <tr
                class="ezd-descriptions-row"
              >
                <td
                  class="ezd-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Created
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      Lili Qu
                    </span>
                  </div>
                </td>
                <td
                  class="ezd-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Association
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      <a>
                        421421
                      </a>
                    </span>
                  </div>
                </td>
                <td
                  class="ezd-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Creation Time
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      2017-01-10
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ezd-descriptions-row"
              >
                <td
                  class="ezd-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Effective Time
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      2017-10-10
                    </span>
                  </div>
                </td>
                <td
                  class="ezd-descriptions-item"
                  colspan="2"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Remarks
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      Gonghu Road, Xihu District, Hangzhou, Zhejiang, China
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
  <br />,
  <div
    class="ezd-page-header ant-page-header-ghost"
  >
    <div
      class="ezd-page-header-heading"
    >
      <div
        class="ezd-page-header-heading-left"
      >
        <div
          class="ezd-page-header-back"
        >
          <div
            aria-label="Back"
            class="ezd-page-header-back-button"
            role="button"
            style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
            tabindex="0"
          >
            <span
              aria-label="arrow-left"
              class="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <span
          class="ezd-page-header-heading-title"
          title="Title"
        >
          Title
        </span>
        <span
          class="ezd-page-header-heading-sub-title"
          title="This is a subtitle"
        >
          This is a subtitle
        </span>
        <span
          class="ezd-page-header-heading-tags"
        >
          <span
            class="ezd-tag ant-tag-blue"
          >
            Running
          </span>
        </span>
      </div>
      <span
        class="ezd-page-header-heading-extra"
      >
        <button
          class="ezd-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ezd-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ezd-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </span>
    </div>
    <div
      class="ezd-page-header-content"
    >
      <div
        class="ezd-row"
      >
        <div
          class="ezd-statistic"
        >
          <div
            class="ezd-statistic-title"
          >
            Status
          </div>
          <div
            class="ezd-statistic-content"
          >
            <span
              class="ezd-statistic-content-value"
            >
              Pending
            </span>
          </div>
        </div>
        <div
          class="ezd-statistic"
          style="margin:0 32px"
        >
          <div
            class="ezd-statistic-title"
          >
            Price
          </div>
          <div
            class="ezd-statistic-content"
          >
            <span
              class="ezd-statistic-content-prefix"
            >
              $
            </span>
            <span
              class="ezd-statistic-content-value"
            >
              <span
                class="ezd-statistic-content-value-int"
              >
                568
              </span>
              <span
                class="ezd-statistic-content-value-decimal"
              >
                .08
              </span>
            </span>
          </div>
        </div>
        <div
          class="ezd-statistic"
        >
          <div
            class="ezd-statistic-title"
          >
            Balance
          </div>
          <div
            class="ezd-statistic-content"
          >
            <span
              class="ezd-statistic-content-prefix"
            >
              $
            </span>
            <span
              class="ezd-statistic-content-value"
            >
              <span
                class="ezd-statistic-content-value-int"
              >
                3,345
              </span>
              <span
                class="ezd-statistic-content-value-decimal"
              >
                .08
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/page-header/demo/basic.md correctly 1`] = `
<div
  class="ezd-page-header site-page-header ant-page-header-ghost"
>
  <div
    class="ezd-page-header-heading"
  >
    <div
      class="ezd-page-header-heading-left"
    >
      <div
        class="ezd-page-header-back"
      >
        <div
          aria-label="Back"
          class="ezd-page-header-back-button"
          role="button"
          style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
          tabindex="0"
        >
          <span
            aria-label="arrow-left"
            class="anticon anticon-arrow-left"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="arrow-left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="ezd-page-header-heading-title"
        title="Title"
      >
        Title
      </span>
      <span
        class="ezd-page-header-heading-sub-title"
        title="This is a subtitle"
      >
        This is a subtitle
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/breadcrumb.md correctly 1`] = `
<div
  class="ezd-page-header site-page-header has-breadcrumb ant-page-header-ghost"
>
  <div
    class="ezd-breadcrumb"
  >
    <span>
      <span
        class="ezd-breadcrumb-link"
      >
        <a
          href="#/index"
        >
          First-level Menu
        </a>
      </span>
      <span
        class="ezd-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ezd-breadcrumb-link"
      >
        <a
          href="#/index/first"
        >
          Second-level Menu
        </a>
      </span>
      <span
        class="ezd-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ezd-breadcrumb-link"
      >
        <span>
          Third-level Menu
        </span>
      </span>
      <span
        class="ezd-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>
  <div
    class="ezd-page-header-heading"
  >
    <div
      class="ezd-page-header-heading-left"
    >
      <span
        class="ezd-page-header-heading-title"
        title="Title"
      >
        Title
      </span>
      <span
        class="ezd-page-header-heading-sub-title"
        title="This is a subtitle"
      >
        This is a subtitle
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/content.md correctly 1`] = `
<div
  class="ezd-page-header site-page-header has-breadcrumb ant-page-header-ghost"
>
  <div
    class="ezd-breadcrumb"
  >
    <span>
      <span
        class="ezd-breadcrumb-link"
      >
        <a
          href="#/index"
        >
          First-level Menu
        </a>
      </span>
      <span
        class="ezd-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ezd-breadcrumb-link"
      >
        <a
          href="#/index/first"
        >
          Second-level Menu
        </a>
      </span>
      <span
        class="ezd-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ezd-breadcrumb-link"
      >
        <span>
          Third-level Menu
        </span>
      </span>
      <span
        class="ezd-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>
  <div
    class="ezd-page-header-heading"
  >
    <div
      class="ezd-page-header-heading-left"
    >
      <span
        class="ezd-avatar ant-avatar-circle ant-avatar-image"
      >
        <img
          src="https://avatars1.githubusercontent.com/u/8186664?s=460&v=4"
        />
      </span>
      <span
        class="ezd-page-header-heading-title"
        title="Title"
      >
        Title
      </span>
      <span
        class="ezd-page-header-heading-sub-title"
        title="This is a subtitle"
      >
        This is a subtitle
      </span>
      <span
        class="ezd-page-header-heading-tags"
      >
        <span
          class="ezd-tag ant-tag-blue"
        >
          Running
        </span>
      </span>
    </div>
    <span
      class="ezd-page-header-heading-extra"
    >
      <button
        class="ezd-btn"
        type="button"
      >
        <span>
          Operation
        </span>
      </button>
      <button
        class="ezd-btn"
        type="button"
      >
        <span>
          Operation
        </span>
      </button>
      <button
        class="ezd-btn ant-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
      <button
        class="ezd-btn ant-dropdown-trigger"
        style="border:none;padding:0"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
          style="font-size:20px;vertical-align:top"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </span>
  </div>
  <div
    class="ezd-page-header-content"
  >
    <div
      class="ezd-row"
    >
      <div
        style="flex:1"
      >
        <div
          class="ezd-typography"
        >
          EZ Design interprets the color system into two levels: a system-level color system and a product-level color system.
        </div>
        <div
          class="ezd-typography"
        >
          EZ Design's design team preferred to design with the HSB color model, which makes it easier for designers to have a clear psychological expectation of color when adjusting colors, as well as facilitate communication in teams.
        </div>
        <div>
          <a
            class="example-link"
          >
            <img
              alt="Quick Start"
              class="example-link-icon"
              src="https://gw.alipayobjects.com/zos/rmsportal/MjEImQtenlyueSmVEfUD.svg"
            />
            Quick Start
          </a>
          <a
            class="example-link"
          >
            <img
              alt=" Product Info"
              class="example-link-icon"
              src="https://gw.alipayobjects.com/zos/rmsportal/NbuDUAuBlIApFuDvWiND.svg"
            />
             Product Info
          </a>
          <a
            class="example-link"
          >
            <img
              alt="Product Doc"
              class="example-link-icon"
              src="https://gw.alipayobjects.com/zos/rmsportal/ohOEPSYdDTNnyMbGuyLb.svg"
            />
            Product Doc
          </a>
        </div>
      </div>
      <div
        class="image"
      >
        <img
          alt="content"
          src="https://gw.alipayobjects.com/zos/antfincdn/K%24NnlsB%26hz/pageHeader.svg"
          width="100%"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/ghost.md correctly 1`] = `
<div
  class="site-page-header-ghost-wrapper"
>
  <div
    class="ezd-page-header"
  >
    <div
      class="ezd-page-header-heading"
    >
      <div
        class="ezd-page-header-heading-left"
      >
        <div
          class="ezd-page-header-back"
        >
          <div
            aria-label="Back"
            class="ezd-page-header-back-button"
            role="button"
            style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
            tabindex="0"
          >
            <span
              aria-label="arrow-left"
              class="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <span
          class="ezd-page-header-heading-title"
          title="Title"
        >
          Title
        </span>
        <span
          class="ezd-page-header-heading-sub-title"
          title="This is a subtitle"
        >
          This is a subtitle
        </span>
      </div>
      <span
        class="ezd-page-header-heading-extra"
      >
        <button
          class="ezd-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ezd-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ezd-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </span>
    </div>
    <div
      class="ezd-page-header-content"
    >
      <div
        class="ezd-descriptions ant-descriptions-small"
      >
        <div
          class="ezd-descriptions-view"
        >
          <table>
            <tbody>
              <tr
                class="ezd-descriptions-row"
              >
                <td
                  class="ezd-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Created
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      Lili Qu
                    </span>
                  </div>
                </td>
                <td
                  class="ezd-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Association
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      <a>
                        421421
                      </a>
                    </span>
                  </div>
                </td>
                <td
                  class="ezd-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Creation Time
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      2017-01-10
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ezd-descriptions-row"
              >
                <td
                  class="ezd-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Effective Time
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      2017-10-10
                    </span>
                  </div>
                </td>
                <td
                  class="ezd-descriptions-item"
                  colspan="2"
                >
                  <div
                    class="ezd-descriptions-item-container"
                  >
                    <span
                      class="ezd-descriptions-item-label"
                    >
                      Remarks
                    </span>
                    <span
                      class="ezd-descriptions-item-content"
                    >
                      Gonghu Road, Xihu District, Hangzhou, Zhejiang, China
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/responsive.md correctly 1`] = `
<div
  class="ezd-page-header site-page-header-responsive has-footer ant-page-header-ghost"
>
  <div
    class="ezd-page-header-heading"
  >
    <div
      class="ezd-page-header-heading-left"
    >
      <div
        class="ezd-page-header-back"
      >
        <div
          aria-label="Back"
          class="ezd-page-header-back-button"
          role="button"
          style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
          tabindex="0"
        >
          <span
            aria-label="arrow-left"
            class="anticon anticon-arrow-left"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="arrow-left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="ezd-page-header-heading-title"
        title="Title"
      >
        Title
      </span>
      <span
        class="ezd-page-header-heading-sub-title"
        title="This is a subtitle"
      >
        This is a subtitle
      </span>
    </div>
    <span
      class="ezd-page-header-heading-extra"
    >
      <button
        class="ezd-btn"
        type="button"
      >
        <span>
          Operation
        </span>
      </button>
      <button
        class="ezd-btn"
        type="button"
      >
        <span>
          Operation
        </span>
      </button>
      <button
        class="ezd-btn ant-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
    </span>
  </div>
  <div
    class="ezd-page-header-content"
  >
    <div
      class="content"
    >
      <div
        class="main"
      >
        <div
          class="ezd-descriptions ant-descriptions-small"
        >
          <div
            class="ezd-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ezd-descriptions-row"
                >
                  <td
                    class="ezd-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="ezd-descriptions-item-container"
                    >
                      <span
                        class="ezd-descriptions-item-label"
                      >
                        Created
                      </span>
                      <span
                        class="ezd-descriptions-item-content"
                      >
                        Lili Qu
                      </span>
                    </div>
                  </td>
                  <td
                    class="ezd-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="ezd-descriptions-item-container"
                    >
                      <span
                        class="ezd-descriptions-item-label"
                      >
                        Association
                      </span>
                      <span
                        class="ezd-descriptions-item-content"
                      >
                        <a>
                          421421
                        </a>
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ezd-descriptions-row"
                >
                  <td
                    class="ezd-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="ezd-descriptions-item-container"
                    >
                      <span
                        class="ezd-descriptions-item-label"
                      >
                        Creation Time
                      </span>
                      <span
                        class="ezd-descriptions-item-content"
                      >
                        2017-01-10
                      </span>
                    </div>
                  </td>
                  <td
                    class="ezd-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="ezd-descriptions-item-container"
                    >
                      <span
                        class="ezd-descriptions-item-label"
                      >
                        Effective Time
                      </span>
                      <span
                        class="ezd-descriptions-item-content"
                      >
                        2017-10-10
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ezd-descriptions-row"
                >
                  <td
                    class="ezd-descriptions-item"
                    colspan="2"
                  >
                    <div
                      class="ezd-descriptions-item-container"
                    >
                      <span
                        class="ezd-descriptions-item-label"
                      >
                        Remarks
                      </span>
                      <span
                        class="ezd-descriptions-item-content"
                      >
                        Gonghu Road, Xihu District, Hangzhou, Zhejiang, China
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="extra"
      >
        <div
          style="display:flex;width:max-content;justify-content:flex-end"
        >
          <div
            class="ezd-statistic"
            style="margin-right:32px"
          >
            <div
              class="ezd-statistic-title"
            >
              Status
            </div>
            <div
              class="ezd-statistic-content"
            >
              <span
                class="ezd-statistic-content-value"
              >
                Pending
              </span>
            </div>
          </div>
          <div
            class="ezd-statistic"
          >
            <div
              class="ezd-statistic-title"
            >
              Price
            </div>
            <div
              class="ezd-statistic-content"
            >
              <span
                class="ezd-statistic-content-prefix"
              >
                $
              </span>
              <span
                class="ezd-statistic-content-value"
              >
                <span
                  class="ezd-statistic-content-value-int"
                >
                  568
                </span>
                <span
                  class="ezd-statistic-content-value-decimal"
                >
                  .08
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ezd-page-header-footer"
  >
    <div
      class="ezd-tabs ant-tabs-top"
    >
      <div
        class="ezd-tabs-nav"
        role="tablist"
      >
        <div
          class="ezd-tabs-nav-wrap"
        >
          <div
            class="ezd-tabs-nav-list"
            style="transform:translate(0px, 0px)"
          >
            <div
              class="ezd-tabs-tab ant-tabs-tab-active"
            >
              <div
                aria-selected="true"
                class="ezd-tabs-tab-btn"
                role="tab"
                tabindex="0"
              >
                Details
              </div>
            </div>
            <div
              class="ezd-tabs-tab"
            >
              <div
                aria-selected="false"
                class="ezd-tabs-tab-btn"
                role="tab"
                tabindex="0"
              >
                Rule
              </div>
            </div>
            <div
              class="ezd-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
        <div
          class="ezd-tabs-nav-operations ant-tabs-nav-operations-hidden"
        >
          <button
            aria-controls="null-more-popup"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-hidden="true"
            class="ezd-tabs-nav-more"
            id="null-more"
            style="visibility:hidden;order:1"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="ezd-tabs-content-holder"
      >
        <div
          class="ezd-tabs-content ant-tabs-content-top"
        >
          <div
            aria-hidden="false"
            class="ezd-tabs-tabpane ant-tabs-tabpane-active"
            role="tabpanel"
            tabindex="0"
          />
          <div
            aria-hidden="true"
            class="ezd-tabs-tabpane"
            role="tabpanel"
            style="display:none"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
